--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,8 +12,9 @@
     <color name="vk_auth_back_color">#517298</color>
     <color name="vk_auth_divider_color">#435f7e</color>
     <color name="vk_auth_pressed_color">#2D3A506B</color>
-    
+
     <!-- fragment_profile -->
     <color name="profile_text_color">#b3000000</color>
     <color name="profile_pressed_text_color">#7A000000</color>
+    <color name="rent_flat_color">#55c5b7</color>
 </resources>
