--- a/app/src/main/res/layout/content_apartment.xml
+++ b/app/src/main/res/layout/content_apartment.xml
@@ -37,7 +37,7 @@
             android:layout_marginTop="16dp"
             android:background="@drawable/circle_metro"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView17" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_price" />
 
         <TextView
             android:id="@+id/tv_metro_name"
@@ -437,7 +437,7 @@
             android:focusable="true" />
 
         <TextView
-            android:id="@+id/textView17"
+            android:id="@+id/tv_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
