--- a/app/src/main/res/layout/content_apartment.xml
+++ b/app/src/main/res/layout/content_apartment.xml
@@ -35,7 +35,7 @@
             android:layout_height="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:background="@drawable/circle_metro"
+            android:background="@drawable/circle_metro1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_price" />
 
